--- a/style.css
+++ b/style.css
@@ -43,10 +43,77 @@
     font-size: 26px;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
-    padding-top: 20 px;
+    padding-top: 20px;
 
 }
 .sectionDescription{
     text-align: center;
     color: #383838;
+}
+.gridContainer{
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    grid-template-areas: "main-content sidebarContent";
+    padding: 20px;
+    flex: 1 0 auto
+}
+.mainCardImg{
+    width: 100%;
+    height: 180px;
+    border-radius: 10px;
+}
+.sidebarCardImg{
+    width: 100%;
+    border-radius: 10px;
+}
+.categoryCard{
+    width: 280px;
+    height: 380px;
+    border: 2px solid transparent;
+    border-radius: 10px;
+    transition: 0.5s;
+    cursor: pointer;
+}
+.main-content{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 10px;
+    grid-area: main-content;
+}
+.categoryCard:hover{
+    border-color: black;
+}
+.mainCategoryCardTitle{
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 6px;
+}
+.mainCategoryCardDescription{
+    padding: 6px;
+}
+.sidebarContent{
+    background-color: #383838;
+    color: white;
+    padding: 16px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-width: 300px;
+    grid-area: sidebarContent;
+    gap: 20px;
+}
+.sidebarCard{
+    width: 75%;
+    border: 1px solid transparent;
+    border-radius: 10px;
+    transition: 0.5s;
+    cursor: pointer;
+}
+.sidebarCard:hover{
+    border-color: gainsboro;
+}
+.sidebarCardTitle{
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 10px;
 }
