--- a/style.css
+++ b/style.css
@@ -117,3 +117,43 @@
     font-family: Arial, Helvetica, sans-serif;
     padding: 10px;
 }
+.logoFooter{
+    width: 180px;
+}
+.footer{
+    width: 100%;
+    min-height: 40px;
+    background-color: #292929;
+    display: flex;
+    flex-wrap: wrap;
+    align-content: center;
+    justify-content: space-between;
+    padding: 15px;
+    gap: 15px;
+}
+.footerAnchor{
+    color: white;
+    text-decoration: none;
+}
+@media (max-width: 630px) {
+    .gridContainer {
+      grid-template-areas:
+        "mainContent"
+        "sidebarContent";
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 15px;
+    }
+    .sidebarContent {
+      min-width: auto;
+    }
+  }
+  @media (max-width: 463px) {
+    .header {
+      justify-content: center;
+    }
+    .footer {
+      justify-content: center;
+    }
+  }
